--- a/components/ProjectCard.module.css
+++ b/components/ProjectCard.module.css
@@ -53,6 +53,7 @@
 
 .img {
   width: 100%;
+  height: auto;
   aspect-ratio: 4 / 3;
   object-fit: cover;
   display: block;
