--- a/components/ShowcaseProject.module.css
+++ b/components/ShowcaseProject.module.css
@@ -87,6 +87,7 @@
 
 .heroImg {
   width: 100%;
+  height: auto;
   aspect-ratio: 4 / 3;
   object-fit: cover;
   display: block;
@@ -111,6 +112,7 @@
 
 .progressImg {
   width: 100%;
+  height: auto;
   aspect-ratio: 4 / 3;
   object-fit: cover;
   display: block;
